# AI_book_writer_Crewai

./: .env.txt  README.md  pyproject.toml
src/ai_book_writer/: crew.py  main.py
src/ai_book_writer/Book/: book.md
src/ai_book_writer/config/: agents.yaml  tasks.yaml
