[project]
name = "ai_book_writer"
version = "0.1.0"
description = "ai_book_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ai_book_writer = "ai_book_writer.main:run"
run_crew = "ai_book_writer.main:run"
train = "ai_book_writer.main:train"
replay = "ai_book_writer.main:replay"
test = "ai_book_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
